--- a/drinking-bird/src/main/resources/fxml/Scene.fxml
+++ b/drinking-bird/src/main/resources/fxml/Scene.fxml
@@ -1,18 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" 
-            prefHeight="200" 
-            prefWidth="320" 
-            xmlns:fx="http://javafx.com/fxml" 
-            fx:controller="org.onebeartoe.building.applications.drinking.bird.FXMLController">
+<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="org.onebeartoe.building.applications.drinking.bird.FXMLController">
     <children>
-        <Button layoutX="126" layoutY="90" text="Click Me!" onAction="#handleButtonAction" fx:id="button" />
-        <Label layoutX="126" layoutY="120" minHeight="16" minWidth="69" fx:id="label" />
+      <BorderPane prefHeight="200.0" prefWidth="320.0">
+         <top>
+              <Label fx:id="label" alignment="CENTER" contentDisplay="CENTER" minHeight="16" minWidth="69" text="top label" BorderPane.alignment="CENTER" />
+         </top>
+         <bottom>
+              <Button fx:id="button" onAction="#handleButtonAction" text="Click Me!" BorderPane.alignment="CENTER" />
+         </bottom>
+         <center>
+            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+               <image>
+                  <Image url="@drinking-bird.jpg" />
+               </image>
+            </ImageView>
+         </center>
+      </BorderPane>
     </children>
 </AnchorPane>
