--- a/serial-plotter/src/main/resources/fxml/Scene.fxml
+++ b/serial-plotter/src/main/resources/fxml/Scene.fxml
@@ -6,7 +6,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml" fx:controller="org.onebeartoe.data.visualization.serial.plotter.FXMLController">
+<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" 
+            xmlns:fx="http://javafx.com/fxml" 
+            fx:controller="org.onebeartoe.data.visualization.serial.plotter.SerialPotterFxmlController">
     <children>
         <Button layoutX="126" layoutY="90" text="Click Me!" onAction="#handleButtonAction" fx:id="button" />
         <Label layoutX="126" layoutY="120" minHeight="16" minWidth="69" fx:id="label" />
