--- a/serial-plotter/src/main/resources/fxml/Scene.fxml
+++ b/serial-plotter/src/main/resources/fxml/Scene.fxml
@@ -5,12 +5,18 @@
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.chart.AreaChart ?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" 
+
+<AnchorPane id="AnchorPane" 
+            prefHeight="200" 
+            prefWidth="320" 
             xmlns:fx="http://javafx.com/fxml" 
-            fx:controller="org.onebeartoe.data.visualization.serial.plotter.SerialPotterFxmlController">
-    <children>
+            fx:controller="org.onebeartoe.data.visualization.serial.plotter.SerialPotterFxmlController"
+            fx:id="anchorPane">
+    <!--children>
+        <AreaChart fx:id="areaChart" />
         <Button layoutX="126" layoutY="90" text="Click Me!" onAction="#handleButtonAction" fx:id="button" />
         <Label layoutX="126" layoutY="120" minHeight="16" minWidth="69" fx:id="label" />
-    </children>
+    </children-->
 </AnchorPane>
