This is the first commit to have bird drink for a preset amount of time.

--- a/drinking-bird/src/main/resources/fxml/Scene.fxml
+++ b/drinking-bird/src/main/resources/fxml/Scene.fxml
@@ -48,6 +48,7 @@
                         <Insets bottom="10.0" />
                      </VBox.margin></Button>
                   <CheckBox fx:id="checkbox" mnemonicParsing="false" onAction="#handleCheckBoxAction" text="Automatically" />
+                  <ChoiceBox fx:id="durationChoiceBox" onMouseReleased="#onDurationChoiceChanged" prefWidth="150.0" />
                </children>
                <BorderPane.margin>
                   <Insets />
